Update to JDK 17 JAVA EE 8